fix: make the catalogs not expanded by default

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -200,7 +200,7 @@
 
         <DataTemplate x:Name="FolderTemplate">
             <TreeViewItem AutomationProperties.Name="{Binding Name}"
-                          ItemsSource="{Binding Children}" IsExpanded="True" Visibility="{Binding IsVisible, Converter={StaticResource BoolToVisibilityConvereter}}">
+                          ItemsSource="{Binding Children}" IsExpanded="False" Visibility="{Binding IsVisible, Converter={StaticResource BoolToVisibilityConvereter}}">
                 <TreeViewItem.ContextFlyout>
                     <MenuFlyout>
                         <MenuFlyoutItem x:Name="Edit_CatalogContextMenuItem" Text="{loc:StringResource Key=Edit}" Icon="Edit" Click="EditContextMenuItem_Click"/>
@@ -220,7 +220,8 @@
         </DataTemplate>
 
         <DataTemplate x:Name="FileTemplate">
-            <TreeViewItem HorizontalAlignment="Stretch" 
+            <TreeViewItem HorizontalAlignment="Stretch"
+                          Padding="0 0 10 0"
                           HorizontalContentAlignment="Stretch"
                           AutomationProperties.Name="{Binding Name}"
                           Visibility="{Binding IsVisible, Converter={StaticResource BoolToVisibilityConvereter}}">
