--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/EditPasswordCatalogDialog.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/EditPasswordCatalogDialog.xaml
@@ -6,7 +6,9 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Pango.Desktop.Uwp.Controls"
     xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
-    xmlns:dialogviewmodels="using:Pango.Desktop.Uwp.Dialogs.ViewModels"
+    xmlns:dialogviewmodels="using:Pango.Desktop.Uwp.Dialogs.ViewModels" 
+    xmlns:interactivity="using:Microsoft.Xaml.Interactivity" 
+    xmlns:behaviors="using:Microsoft.Toolkit.Uwp.UI.Behaviors"
     d:DataContext="{d:DesignInstance Type=dialogviewmodels:EditPasswordCatalogDialogViewModel}"
     mc:Ignorable="d">
 
@@ -45,6 +47,10 @@
                                     PropertyName="NewCatalogName"
                                     Text="{Binding Path=NewCatalogName, Mode=TwoWay}"
                                     HeaderText="{loc:StringResource Key='NewCatalogName'}"
-                                    PlaceholderText="{loc:StringResource Key='NewCatalogName'}" />
+                                    PlaceholderText="{loc:StringResource Key='NewCatalogName'}">
+            <interactivity:Interaction.Behaviors>
+                <behaviors:AutoFocusBehavior />
+            </interactivity:Interaction.Behaviors>
+        </controls:ValidationTextBox>
     </Grid>
 </Page>
