--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -329,8 +329,6 @@
                                               Command="{Binding Path=CreateCatalogCommand}"
                                               ToolTipService.ToolTip="{loc:StringResource Key=AddNewCatalog}"/>
 
-                                <AppBarSeparator />
-
                                 <AppBarButton Icon="Edit" 
                                               LabelPosition="Collapsed"
                                               Command="{Binding Path=EditPasswordCommand}"
@@ -342,6 +340,13 @@
                                               Command="{Binding Path=DeleteCommand}"
                                               CommandParameter="{Binding SelectedItem}"
                                               ToolTipService.ToolTip="{loc:StringResource Key=Delete}"/>
+                                
+                                <AppBarSeparator />
+
+                                <AppBarButton Icon="Refresh" 
+                                              LabelPosition="Collapsed"
+                                              Command="{Binding Path=UpdateListCommand}"
+                                              ToolTipService.ToolTip="{loc:StringResource Key=UpdatePasswordList}"/>
                             </CommandBar>
                         </Grid>
 
