feat: set autofocus to the text box on the new catalog dialog

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/EditPasswordCatalogDialog.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/EditPasswordCatalogDialog.xaml
@@ -23,6 +23,7 @@
                     Orientation="Horizontal"
                     Visibility="{Binding Path=HasCatalogs, Converter={StaticResource BoolToVisibilityConvereter}}">
             <ComboBox ItemsSource="{Binding Path=AvailableCatalogs}"
+                      IsTabStop="True"
                       SelectedItem="{Binding Path=InitialCatalog, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
