feat(winui-3): migrate the project to winui-3 .NET 8

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/MainAppView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/MainAppView.xaml
@@ -7,11 +7,12 @@
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
     xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract"
-    muxc:BackdropMaterial.ApplyToRootOrPageBackground="True"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
 
+    <!--muxc:BackdropMaterial.ApplyToRootOrPageBackground="True"-->
+    
     <Grid>
         <!--  Navigation view  -->
         <muxc:NavigationView
