--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/EditPasswordCatalogDialog.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/EditPasswordCatalogDialog.xaml
@@ -7,8 +7,6 @@
     xmlns:controls="using:Pango.Desktop.Uwp.Controls"
     xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
     xmlns:dialogviewmodels="using:Pango.Desktop.Uwp.Dialogs.ViewModels" 
-    xmlns:interactivity="using:Microsoft.Xaml.Interactivity" 
-    xmlns:behaviors="using:Microsoft.Toolkit.Uwp.UI.Behaviors"
     d:DataContext="{d:DesignInstance Type=dialogviewmodels:EditPasswordCatalogDialogViewModel}"
     mc:Ignorable="d">
 
@@ -49,9 +47,9 @@
                                     Text="{Binding Path=NewCatalogName, Mode=TwoWay}"
                                     HeaderText="{loc:StringResource Key='NewCatalogName'}"
                                     PlaceholderText="{loc:StringResource Key='NewCatalogName'}">
-            <interactivity:Interaction.Behaviors>
+            <!--<interactivity:Interaction.Behaviors>
                 <behaviors:AutoFocusBehavior />
-            </interactivity:Interaction.Behaviors>
+            </interactivity:Interaction.Behaviors>-->
         </controls:ValidationTextBox>
     </Grid>
 </Page>
