--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/MainWindow.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/MainWindow.xaml
@@ -11,7 +11,8 @@
         <MicaBackdrop />
     </Window.SystemBackdrop>
     
-    <Grid RowDefinitions="32,*">
+    <Grid x:Name="RootGrid" 
+          RowDefinitions="32,*">
         <!--  Custom title bar  -->
         <Border Height="30"
                 Margin="0,0,0,0"
