fix: move the registretion and unregistration of messages into OnNvagitedTo and OnNavigatedFrom methods of PageBase

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SettingsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SettingsView.xaml
@@ -98,7 +98,7 @@
                                    Text="{Binding Version}" />
                         <toolkit:SettingsExpander.Items>
                             <toolkit:SettingsCard x:Name="bugRequestCard"
-                                                  Click="bugRequestCard_Click"
+                                                  Click="BugRequestCard_Click"
                                                   Header="File a bug or request new sample"
                                                   IsClickEnabled="True">
                                 <toolkit:SettingsCard.ActionIcon>
