--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/Shell.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/Shell.xaml
@@ -4,18 +4,16 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
-    xmlns:viewmodels="using:Pango.Desktop.Uwp.ViewModels"
-    xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract" 
-    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:behaviors="using:CommunityToolkit.WinUI.Behaviors"
+    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
+    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:viewmodels="using:Pango.Desktop.Uwp.ViewModels"
+    xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract"
     x:Name="ShellRootElement"
     Loaded="Shell_OnLoaded"
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance Type=viewmodels:ShellViewModel}"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
-    <!--muxc:BackdropMaterial.ApplyToRootOrPageBackground="True"-->
     
     <Grid>
 
@@ -23,34 +21,8 @@
                         VerticalContentAlignment="Stretch"
                         HorizontalContentAlignment="Stretch"
                         Margin="10,30,10,10"/>
-
-        <!--  Custom title bar  -->
-        <!--<Border Height="30"
-                Margin="0,0,0,0"
-                Padding="20,5,0,0"
-                x:Name="TitleBarBorder"
-                VerticalAlignment="Top"
-                Background="Transparent">
-            <StackPanel Spacing="5"
-                        Orientation="Horizontal">
-                <Image Width="20"
-                       Height="20"
-                       Source="ms-appx:///assets/logo.png" />
-            </StackPanel>
-        </Border>-->
-
-        <!--<muxc1:InAppNotification x:Name="InAppNotification" 
-                                 StackMode="StackInFront">
-            <muxc1:InAppNotification.ContentTemplate>
-                <DataTemplate>
-                    <StackPanel>
-                        --><!--<TextBlock Text="{Binding Type}" Margin="0,0,0,8" />--><!--
-                        <TextBlock Text="{Binding Message}" Style="{ThemeResource CaptionTextBlockStyle}" Opacity="0.8" />
-                    </StackPanel>
-                </DataTemplate>
-            </muxc1:InAppNotification.ContentTemplate>
-        </muxc1:InAppNotification>-->
-        <muxc:InfoBar VerticalAlignment="Bottom">
+        
+        <muxc:InfoBar VerticalAlignment="Bottom" Background="Black" Opacity="0.75">
             <interactivity:Interaction.Behaviors>
                 <behaviors:StackedNotificationsBehavior x:Name="InAppNotification" />
             </interactivity:Interaction.Behaviors>
