refactoring: fix null-ref validations

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/App.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/App.xaml
@@ -14,6 +14,7 @@
                         <ResourceDictionary Source="Resources/Styles/Text.xaml" />
                         <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
                         <ResourceDictionary Source="Resources/Styles/TextBlockStyles.xaml" />
+                        <ResourceDictionary Source="Resources/Styles/TextBoxStyles.xaml" />
                         <ResourceDictionary Source="Resources/Styles/ToggleSwitchStyles.xaml" />
                         <ResourceDictionary Source="Resources/Styles/TreeViewStyles.xaml" />
                         
