--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditPasswordView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditPasswordView.xaml
@@ -29,20 +29,24 @@
                 <StackPanel Orientation="Vertical" 
                             DataContext="{Binding PasswordValidator}">
                     <controls:ValidationTextBox Margin="10"
+                                                x:Name="TitleTextBox"
                                                 PropertyName="Title"
                                                 Text="{Binding Path=Title, Mode=TwoWay}"
                                                 HeaderText="{loc:StringResource Key='Title'}"  
                                                 PlaceholderText="{loc:StringResource Key='Title'}" />
                     <controls:ValidationTextBox Margin="10" 
+                                                x:Name="LoginTextBox"
                                                 Text="{Binding Path=Login, Mode=TwoWay}"
                                                 HeaderText="{loc:StringResource Key='Login'}" 
                                                 PlaceholderText="{loc:StringResource Key='EmailOrUsername'}" />
                     <controls:ValidationPasswordBox Margin="10" 
+                                                    x:Name="PasswordTextBox"
                                                     Password="{Binding Path=Password, Mode=TwoWay}"
                                                     HeaderText="{loc:StringResource Key='Password'}" 
                                                     PlaceholderText="{loc:StringResource Key='Password'}" />
 
                     <TextBlock Text="Notes"
+                               IsTabStop="False"
                                Margin="10,10,0,0"/>
                     <TextBox Margin="10,10,35,10"
                              MinHeight="100"
