--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Controls/ValidationTextBox.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Controls/ValidationTextBox.xaml
@@ -1,5 +1,5 @@
-﻿<ResourceDictionary 
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:local="using:Pango.Desktop.Uwp.Controls">
 
     <Style TargetType="local:ValidationTextBox">
@@ -24,6 +24,7 @@
                             Margin="0,32,0,0"
                             VerticalAlignment="Center"
                             FontSize="18"
+                            IsTabStop="False"
                             Foreground="Orange"
                             Glyph="&#xE814;"
                             Visibility="Collapsed" />
