--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -222,12 +222,19 @@
         <DataTemplate x:Name="FileTemplate">
             <TreeViewItem HorizontalAlignment="Stretch"
                           Padding="0 0 10 0"
+                          IsDoubleTapEnabled="True"
+                          DoubleTapped="Password_DoubleTapped"
                           HorizontalContentAlignment="Stretch"
                           AutomationProperties.Name="{Binding Name}"
                           Visibility="{Binding IsVisible, Converter={StaticResource BoolToVisibilityConvereter}}">
                 
                 <TreeViewItem.ContextFlyout>
                     <MenuFlyout >
+                        <MenuFlyoutItem x:Name="SeePassword_PasswordContextMenuItem" Text="{loc:StringResource Key=SeePassword}" Click="SeeContextMenuItem_Click">
+                            <MenuFlyoutItem.Icon>
+                                <FontIcon Glyph="&#xE7B3;"/>
+                            </MenuFlyoutItem.Icon>
+                        </MenuFlyoutItem>
                         <MenuFlyoutItem x:Name="EditPassword_PasswordContextMenuItem" Text="{loc:StringResource Key=Edit}" Icon="Edit" Click="EditContextMenuItem_Click"/>
                         <MenuFlyoutItem x:Name="DeletePassword_PasswordContextMenuItem" Text="{loc:StringResource Key=Delete}" Icon="Delete" Click="DeleteContextMenuItem_Click"/>
                         <MenuFlyoutSeparator/>
@@ -242,12 +249,12 @@
                     </Grid.ColumnDefinitions>
 
                     <FontIcon Glyph="&#xE8D7;"
-                      Margin="5,2"
-                      FontSize="{StaticResource FontIconSize}"/>
+                              Margin="5,2"
+                              FontSize="{StaticResource FontIconSize}"/>
 
                     <TextBlock Grid.Column="1" 
-                       Text="{Binding Name}"
-                       VerticalAlignment="Center"/>
+                               Text="{Binding Name}"
+                               VerticalAlignment="Center"/>
 
                     <StackPanel Grid.Column="2"
                                 Orientation="Horizontal"
@@ -258,6 +265,13 @@
                                 ToolTipService.ToolTip="{loc:StringResource Key=CopyPassword}"
                                 Command="{Binding DataContext.DataContext.CopyPasswordToClipboardCommand, ElementName=proxy}">
                             <FontIcon Glyph="&#xE8C8;"
+                                      FontSize="{StaticResource FontIconSize}"/>
+                        </Button>
+                        <Button Margin="2"
+                                CommandParameter="{Binding}"
+                                ToolTipService.ToolTip="{loc:StringResource Key=SeePassword}"
+                                Command="{Binding DataContext.DataContext.SeePasswordCommand, ElementName=proxy}">
+                            <FontIcon Glyph="&#xE7B3;"
                                       FontSize="{StaticResource FontIconSize}"/>
                         </Button>
                     </StackPanel>
