--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Styles/TextBoxStyles.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Styles/TextBoxStyles.xaml
@@ -200,7 +200,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="TextBox">
-                    <Grid>
+                    <Grid IsTabStop="False">
                         <Grid.Resources>
                             <Style x:Name="DeleteButtonStyle" TargetType="Button">
                                 <Setter Property="Template">
