--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditPasswordView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditPasswordView.xaml
@@ -26,7 +26,7 @@
 
         <ScrollViewer Grid.Row="1">
             <StackPanel Orientation="Vertical">
-                <StackPanel Orientation="Vertical" 
+                <StackPanel Margin="0,0,-10,0" Orientation="Vertical" 
                             DataContext="{Binding PasswordValidator}">
                     <controls:ValidationTextBox Margin="10"
                                                 x:Name="TitleTextBox"
@@ -73,7 +73,8 @@
                     </StackPanel>
                 </StackPanel>
 
-                <StackPanel Orientation="Horizontal"
+                <StackPanel Margin="20,0" 
+                            Orientation="Horizontal"
                             HorizontalAlignment="Right">
                     <Button Margin="5" 
                             Content="{loc:StringResource Key='Save'}"
