feat: resize the navigation panel

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/MainAppView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/MainAppView.xaml
@@ -18,6 +18,7 @@
                              BackRequested="NavigationView_BackRequested"
                              IsBackButtonVisible="Collapsed"
                              IsBackEnabled="False"
+                             OpenPaneLength="200"
                              IsSettingsVisible="True"
                              IsTitleBarAutoPaddingEnabled="False"
                              ItemInvoked="NavigationView_ItemInvoked">
